--- a/SampleLoginAPI/SampleLoginAPI.csproj
+++ b/SampleLoginAPI/SampleLoginAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,6 +18,12 @@
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  <Folder Include="wwwroot\">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Folder>
   </ItemGroup>
 
 </Project>
